--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -28,6 +28,7 @@
   background-color: #f8f9fa;
   width: 20rem;
   margin-top: 20vh;
+  margin-bottom: 10vh;
   padding: 1.5rem;
   background-color: #f8f9fa00;
   color: #1c2e3f;
@@ -36,28 +37,4 @@
   font-size: 2rem;
   font-weight: 200;
   cursor: pointer;
-}
-
-.resources {
-  width: 100vw;
-  bottom: 0;
-  position: absolute;
-  text-align: center;
-  padding-bottom: 0rem;
-}
-
-.resourceLink {
-  color: #1c2e3f;
-  text-decoration: none;
-  margin: 2rem;
-}
-
-.resourceLink:hover {
-  color: #3e648a;
-}
-
-.copyRight {
-  color: #1c2e3f;
-  font-size: 0.8rem;
-  margin-top: 2rem;
 }
