adding get started page

--- a/src/styles/GetStarted.css
+++ b/src/styles/GetStarted.css
@@ -15,7 +15,7 @@ input {
   background-color: #f8f9fa;
   border: none;
   padding: 1rem;
-  margin: 4rem;
+  margin-top: 4rem;
   border-radius: 8px;
   width: 40rem;
   font-size: 1.5rem;
