--- a/src/styles/GetStarted.css
+++ b/src/styles/GetStarted.css
@@ -18,6 +18,7 @@ input {
   margin-top: 4rem;
   border-radius: 8px;
   width: 40rem;
+  max-width: 100vw;
   font-size: 1.5rem;
   font-weight: 200;
   outline: none;
