--- a/src/styles/GetStarted.css
+++ b/src/styles/GetStarted.css
@@ -1,10 +1,13 @@
 .container {
   background-color: #1c2e3f;
   color: #f8f9fa;
-  min-height: 80vh;
+  min-height: 100vh;
   text-align: center;
   font-size: 2rem;
-  padding-top: 20vh;
+}
+
+.formContainer {
+  padding-top: 12rem;
 }
 
 label {
