--- a/src/styles/common/buttonLight.css
+++ b/src/styles/common/buttonLight.css
@@ -1,7 +1,7 @@
 .buttonLight {
-  width: 20rem;
-  margin-top: 20vh;
-  padding: 1.5rem;
+  width: 15rem;
+  margin-top: 12rem;
+  padding: 1rem;
   background-color: #1c2e3f00;
   color: #f8f9fa;
   border-color: #f8f9fa;
