adding mutations backend and deleteOkr button frontend

--- a/client/src/styles/OKRModal.scss
+++ b/client/src/styles/OKRModal.scss
@@ -7,8 +7,12 @@
   border-radius: 0;
 }
 
-#objective {
+.objective {
   width: 100%;
   min-height: 1.5rem;
   cursor: pointer;
+}
+
+.deleteButton {
+  border: 0;
 }
