--- a/client/src/styles/About.scss
+++ b/client/src/styles/About.scss
@@ -2,23 +2,25 @@
   min-height: 100vh;
   width: 100vw;
   display: flex;
-  position: fixed;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .stat {
-  width: auto;
+  width: 20rem;
   height: auto;
   padding: 1rem;
   text-align: center;
-  border: 0.1rem solid #1c2e3f;
   border-radius: 1rem;
   color: #1c2e3f;
   word-wrap: normal;
   font-size: 1rem;
+  margin: 1rem;
+  background-color: #f8f9fa;
+  box-shadow: 1px 1px 5px #1c2e3f;
 
   .fact {
     font-size: 5rem;
