--- a/client/src/styles/OKRTree.scss
+++ b/client/src/styles/OKRTree.scss
@@ -12,3 +12,17 @@
   width: 100vw;
   height: 100vh;
 }
+
+.okrNode {
+  font-size: 1.5px;
+  cursor: pointer;
+  border-radius: 4px;
+  height: 100%;
+  width: 100%;
+  div {
+    padding: 1px;
+  }
+  rect {
+    fill: none;
+  }
+}
